<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.activity.MainActivity"
    tools:showIn="@layout/activity_main"
    android:background="@color/background_colors"
    android:weightSum="10">

    <LinearLayout
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/txt_country_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wheather"
            android:textColor="@color/white"
            android:textSize="@dimen/_15ssp"/>

        <TextView
            android:id="@+id/txt_date_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_now"
            android:textColor="@color/white"
            android:textSize="@dimen/_15ssp"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:gravity="center">

        <ImageView
            android:id="@+id/img_wheather"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            android:src="@mipmap/ic_launcher"
            android:layout_marginRight="@dimen/_10sdp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_80sdp"
            android:orientation="vertical"
            android:layout_toRightOf="@id/img_wheather"
            android:gravity="center"
            android:layout_marginLeft="@dimen/_10sdp">

            <TextView
                android:id="@+id/txt_status_current"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="@dimen/_18ssp"/>
            <TextView
                android:id="@+id/txt_temp_current"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="@dimen/_18ssp"/>

        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_weight="4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/txt_day_1"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/day_1"
                android:textSize="@dimen/_15ssp"
                android:textColor="@color/white"/>

            <ImageView
                android:id="@+id/img_wheather_day_1"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:src="@mipmap/ic_launcher_round"
                android:layout_margin="@dimen/_10sdp"/>

            <TextView
                android:id="@+id/txt_temp_1"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/C18_31"
                android:textSize="@dimen/_15ssp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/txt_day_2"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/day_2"
                android:textSize="@dimen/_15ssp"
                android:textColor="@color/white"/>

            <ImageView
                android:id="@+id/img_wheather_day_2"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:src="@mipmap/ic_launcher_round"
                android:layout_margin="@dimen/_10sdp"/>

            <TextView
                android:id="@+id/txt_temp_2"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/C18_31"
                android:textSize="@dimen/_15ssp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/txt_day_3"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/day_3"
                android:textSize="@dimen/_15ssp"
                android:textColor="@color/white"/>

            <ImageView
                android:id="@+id/img_wheather_day_3"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:src="@mipmap/ic_launcher_round"
                android:layout_margin="@dimen/_10sdp"/>

            <TextView
                android:id="@+id/txt_temp_3"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/C18_31"
                android:textSize="@dimen/_15ssp"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>